wip: move tools and wrappers to McpPackage